# Cmake-linux0.11

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README-cmake.md  README.md  WORKSPACE
.devcontainer/: CMakeUserPresets.json  devcontainer.json  postCreate.sh
boot/: CMakeLists.txt
fs/: BUILD  CMakeLists.txt
init/: BUILD  CMakeLists.txt
kernel/: BUILD  CMakeLists.txt
kernel/blk_drv/: CMakeLists.txt
kernel/chr_drv/: CMakeLists.txt
kernel/math/: CMakeLists.txt
lib/: BUILD  CMakeLists.txt
mm/: BUILD  CMakeLists.txt
tools/: BUILD  CMakeLists.txt  build.c
